--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "chart.js": "^4.5.1",
     "firebase": "^11.10.0",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "ng2-charts": "^6.0.1",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.23.0",
